testdata/baselines/reference/submodule/conformance/importMetaPropertyInvalidInCall.errors.txt
b.ts(1,8): error TS17012: 'foo' is not a valid meta-property for keyword 'import'. Did you mean 'meta'?
b.ts(2,8): error TS17012: 'foo' is not a valid meta-property for keyword 'import'. Did you mean 'meta'?


==== b.ts (2 errors) ====
    import.foo();
           ~~~
!!! error TS17012: 'foo' is not a valid meta-property for keyword 'import'. Did you mean 'meta'?
    import.foo;
           ~~~
!!! error TS17012: 'foo' is not a valid meta-property for keyword 'import'. Did you mean 'meta'?
    